Add export to packagejson

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
   branch: master
+  repo: semillistas/jujarweb
+  base_url: https://gleaming-ethereal-slug.glitch.me
 media_folder: public/img
 public_folder: img
 collections:
