--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "export": "next build; next export",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "netlify-cms-app": "^2.14.18",
     "next": "10.0.6",
+    "next-mdx-remote": "^2.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.13",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.1.3"
   }
 }
